--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -1,4 +1,7 @@
+@font-face {
+  font-family: 'Raleway';
+  src: url("../fonts/Raleway-Regular.ttf"); }
 body {
-  font-family: "Segoe UI"; }
+  font-family: Raleway; }
 
 /*# sourceMappingURL=style.css.map */
