--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -142,6 +142,60 @@ ul#iconMenu {
         color: #FFF;
         text-shadow: 2px 2px #6c6c6c; }
 
+div#loginForm {
+  display: none;
+  position: absolute;
+  top: 80px;
+  right: 20px;
+  background-color: white;
+  box-shadow: 0px 2px 2px #939393;
+  text-align: right; }
+  div#loginForm:after {
+    content: "";
+    display: block;
+    /* reduce the damage in FF3.0 */
+    position: absolute;
+    top: -15px;
+    right: 25px;
+    width: 0;
+    border-width: 0 15px 15px;
+    border-style: solid;
+    border-color: white transparent; }
+  div#loginForm div.form-group {
+    display: block;
+    padding: 10px 10px 0;
+    text-align: left; }
+    div#loginForm div.form-group div.form-label {
+      text-transform: lowercase;
+      display: inline-block;
+      width: 70px;
+      font-size: 1.2em;
+      position: relative;
+      top: 2px; }
+    div#loginForm div.form-group input.form-input {
+      width: 180px;
+      height: 30px; }
+  div#loginForm .loginButton {
+    border: none;
+    background-color: transparent;
+    color: #b30000;
+    font-family: Zag;
+    font-size: 1.5em;
+    padding: 15px 10px 5px;
+    text-transform: uppercase;
+    cursor: pointer; }
+    div#loginForm .loginButton:hover {
+      color: #6c6c6c; }
+
+input {
+  height: 40px;
+  border: 1px #000 solid;
+  padding: 0 8px;
+  color: #6c6c6c;
+  font-family: Zag;
+  font-size: 1em;
+  outline: none; }
+
 .hidden {
   display: none; }
 
