--- a/WebContent/resources/css/style.scss
+++ b/WebContent/resources/css/style.scss
@@ -2,6 +2,7 @@ $bgColor1: 	    rgb(255,255,255);
 $bgColor2: 	    rgb(211,211,211);
 $fgColor1: 	    rgb(0,0,0);
 $fgColor1-fade: rgb(108,108,108);
+$fgColor2:		rgb(147,147,147);
 $accentColor:   rgb(179,0,0);
 
 $mainFont: Zag;
@@ -38,7 +39,7 @@ div#container{
 
 div#header{
 	background-color: $bgColor2;
-	box-shadow: 0px 2px 2px rgb(147,147,147);
+	box-shadow: 0px 2px 2px $fgColor2;
 	position: relative;
 
 	h1{
@@ -51,18 +52,39 @@ div#header{
 		display: inline-block;
 	}
 
-	input#search{
-		position: absolute;
+	input, select{
 		height: 40px;
-		top: 28px;
-		left: 250px;
 		border: 1px #000 solid;
 		padding: 0 8px;
 		color: $fgColor1-fade;
 		font-family: $mainFont;
 		font-size: 1em;
-		width: 200px;
 		outline: none;
+	}
+
+	select{
+		-webkit-padding-end: 16px;
+		-webkit-padding-start: 8px;
+		-webkit-appearance: button;
+		-webkit-border-radius: 0;
+		-webkit-box-shadow: none;
+		background-image: url('../images/arrow-down.png');
+		background-repeat: no-repeat;
+		background-size: 10px 10px;
+		background-position: center right 5px;
+	}
+
+	input#search{
+		position: absolute;
+			top: 28px;
+			left: 250px;
+		width: 200px;
+	}
+
+	select#searchType{
+		position: absolute;
+			top: 28px;
+			left: 455px;
 	}
 
 	div#header-left{
@@ -110,6 +132,48 @@ div#content{
 			font-weight: 900;
 			margin: 80px 30px 20px;
 		}
+
+		h2.resultsHeader{
+			font-size: 2em;
+			font-weight: lighter;
+			font-style: italic;
+			margin: 40px 30px 20px;
+			text-transform: none;
+
+			span.resultsText{
+				text-transform: lowercase;
+			}
+
+			span.resultsQuery{
+				text-transform: uppercase;
+				color: $accentColor;
+			}
+		}
+
+		ul#typeList{
+			list-style: none;
+			font-size: 3.8em;
+			text-transform: lowercase;
+			font-weight: 900;
+			margin: 40px 0 60px 30px;
+			padding: 0;
+
+			li{
+				display: inline-block;
+				color: $fgColor2;
+				cursor: pointer;
+
+				&+ li{
+					margin-left: 15px;
+				}
+
+				&.active{
+					font-size: 1.5em;
+					color: $fgColor1;
+					text-shadow: 2px 2px $fgColor2;
+				}
+			}
+		}
 	}
 	
 	div#narrowContent{
@@ -118,8 +182,60 @@ div#content{
 		width: 280px;
 		font-size: 1.5em;
 
+		&.narrower{
+			width: 220px;
+		}
+
 		p{
 			margin: 20px;
+		}
+
+		h3{
+			text-transform: uppercase;
+			color: $fgColor2;
+			font-size: 1.2em;
+			margin: 0 0 10px;
+		}
+
+		ul#filterList{
+			list-style: none;
+			margin-left: 5px;
+			padding: 0;
+			text-transform: lowercase;
+
+			li{
+				background-image: url("../images/chevron-arrow-down.png");
+				background-size: 15px 15px;
+				background-repeat: no-repeat;
+				background-position: top 8px right 10px;
+
+				& + li{
+					margin-top: 10px;
+				}
+
+				&.active{
+					background-image: url("../images/chevron-arrow-up.png");
+
+					ul{
+						display: block;
+					}
+				}
+
+				ul{
+					list-style: none;
+					padding: 0 0 0 10px;
+					font-size: 0.8em;
+					display: none;
+
+					li{
+						background: none;
+						input{
+							position: relative;
+	    					vertical-align: middle;
+	    				}
+					}
+				}
+			}
 		}
 	}
 
@@ -127,6 +243,10 @@ div#content{
 		float: right;
 		margin: 10px 30px 20px;
 		width: 600px;
+
+		&.wider{
+			width: 660px;
+		}
 	}
 }
 
@@ -218,7 +338,7 @@ div#loginForm{
 		top: 80px;
 		right: 20px;
 	background-color: $bgColor1;
-	box-shadow: 0px 2px 2px rgb(147,147,147);
+	box-shadow: 0px 2px 2px $fgColor2;
 	text-align: right;
 
 	&:after {
@@ -268,8 +388,6 @@ div#loginForm{
 		}
 	}
 }
-
-
 
 input{
 	height: 40px;
