Fixed CSS of list of types

--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -120,6 +120,11 @@ div#content div#sectionTitle ul#typeList {
       font-size: 1.5em;
       color: black;
       text-shadow: 2px 2px #939393; }
+    div#content div#sectionTitle ul#typeList li a {
+      color: inherit;
+      text-decoration: none; }
+      div#content div#sectionTitle ul#typeList li a:hover {
+        color: inherit; }
 div#content div#narrowContent {
   float: left;
   margin: 10px 30px 20px;
