--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -167,6 +167,10 @@ div#content div#narrowContent {
           div#content div#narrowContent ul#filterList li ul li input {
             position: relative;
             vertical-align: middle; }
+          div#content div#narrowContent ul#filterList li ul li input[type=number] {
+            width: 80px;
+            height: 25px;
+            border-color: lightgray; }
           div#content div#narrowContent ul#filterList li ul li + li {
             margin-top: -10px; }
 div#content div#wideContent {
@@ -274,6 +278,41 @@ div#loginForm {
     cursor: pointer; }
     div#loginForm .loginButton:hover {
       color: #6c6c6c; }
+
+div.product {
+  border: 1px #6c6c6c solid;
+  padding: 15px; }
+  div.product:nth-of-type(odd) {
+    background-color: lightgray; }
+  div.product:nth-of-type(even) {
+    background-color: white; }
+  div.product + div.product {
+    border-top-width: 0; }
+  div.product div.product-name,
+  div.product div.product-description,
+  div.product div.product-price,
+  div.product div.product-add {
+    display: inline-block;
+    vertical-align: middle; }
+  div.product div.product-name {
+    font-weight: bold;
+    font-size: 1.5em;
+    width: 30%; }
+    div.product div.product-name a {
+      text-decoration: none;
+      color: #b30000; }
+  div.product div.product-description {
+    width: calc(50% - 35px); }
+  div.product div.product-price {
+    text-align: right;
+    width: calc(20% - 45px);
+    margin-right: 10px; }
+  div.product div.product-add {
+    width: 40px;
+    height: 40px;
+    background-image: url("../images/cart.png");
+    background-size: 40px 40px;
+    background-repeat: no-repeat; }
 
 input {
   height: 40px;
