--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -129,16 +129,23 @@ div#content div#narrowContent {
   float: left;
   margin: 10px 30px 20px;
   width: 280px;
-  font-size: 1.5em; }
+  font-size: 1.5em;
+  min-height: 250px;
+  position: relative;
+  padding-bottom: 70px; }
   div#content div#narrowContent.narrower {
     width: 220px; }
+    div#content div#narrowContent.narrower img {
+      max-width: 220px; }
   div#content div#narrowContent p {
     margin: 20px; }
   div#content div#narrowContent h3 {
     text-transform: uppercase;
     color: #939393;
     font-size: 1.2em;
-    margin: 0 0 10px; }
+    margin: 10px 0; }
+  div#content div#narrowContent img {
+    max-width: 280px; }
   div#content div#narrowContent ul#filterList {
     list-style: none;
     margin-left: 5px;
@@ -184,7 +191,12 @@ div#footer {
   border-top: 2px black solid;
   text-align: center;
   padding-top: 10px;
-  font-size: 0.8em; }
+  font-size: 0.8em;
+  height: 50px;
+  width: inherit;
+  position: absolute;
+  bottom: 0;
+  left: 0; }
   div#footer a {
     color: #b30000;
     text-decoration: none; }
@@ -304,7 +316,8 @@ div.product {
     margin-left: 15px; }
     div.product div.product-name a {
       text-decoration: none;
-      color: #b30000; }
+      color: #b30000;
+      display: block; }
   div.product div.product-description {
     width: calc(50% - 30px);
     margin-left: 15px; }
@@ -312,6 +325,74 @@ div.product {
     text-align: right;
     width: calc(20% - 30px);
     margin-right: 15px; }
+
+div#viewProduct {
+  font-size: 1.3em; }
+  div#viewProduct h3 {
+    font-size: 2em;
+    text-transform: lowercase;
+    border-top: 2px #6c6c6c solid;
+    padding-top: 15px; }
+
+h2#regTitle {
+  font-size: 2.5em;
+  text-transform: lowercase;
+  margin: 15px 0 10px;
+  text-shadow: 1px 1px #939393; }
+
+div#regDesc {
+  font-size: 1.2em;
+  margin-bottom: 30px; }
+
+table#regForm {
+  margin-top: 15px; }
+  table#regForm td {
+    padding-bottom: 5px; }
+  table#regForm tr td:first-child {
+    text-align: right;
+    text-transform: lowercase;
+    vertical-align: top;
+    padding: 7px 10px 0 0;
+    font-size: 1.2em; }
+  table#regForm .regRow {
+    display: block;
+    padding: 7px 10px 0 0; }
+    table#regForm .regRow:first-of-type {
+      padding: 0; }
+      table#regForm .regRow:first-of-type input:nth-of-type(1) {
+        width: 100px;
+        margin-right: 5px; }
+      table#regForm .regRow:first-of-type input:nth-of-type(2) {
+        width: 195px; }
+    table#regForm .regRow:last-of-type input:nth-of-type(1) {
+      width: 195px;
+      margin-right: 5px; }
+    table#regForm .regRow:last-of-type input:nth-of-type(2) {
+      width: 100px; }
+  table#regForm input {
+    padding: 4px 10px;
+    height: 30px;
+    width: 300px;
+    border-width: 2px; }
+  table#regForm #regName input:nth-of-type(1) {
+    width: 125px;
+    margin-right: 5px; }
+  table#regForm #regName input:nth-of-type(2) {
+    width: 40px;
+    margin-right: 5px; }
+  table#regForm #regName input:nth-of-type(3) {
+    width: 125px; }
+
+input#regButton {
+  background-color: transparent;
+  border: none;
+  color: #b30000;
+  font-size: 1.5em;
+  text-transform: lowercase;
+  text-shadow: 1px 1px #939393;
+  margin-top: 30px; }
+  input#regButton:hover {
+    color: black; }
 
 input {
   height: 40px;
