--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -67,25 +67,21 @@ div#header {
     float: right;
     margin-right: 20px; }
     div#header div#header-right button, div#header div#header-right a {
+      display: inline-block;
       border: none;
       background-color: transparent;
       color: #b30000;
       font-family: Zag;
-      font-size: 1.4em;
-      margin: 25px 20px 0;
+      font-size: 1.3em;
+      margin: 25px 12px 0;
       height: 50px;
       padding: 10px 0;
       text-transform: lowercase;
+      text-decoration: none;
       cursor: pointer;
       outline: none; }
       div#header div#header-right button:hover, div#header div#header-right a:hover {
         color: #6c6c6c; }
-    div#header div#header-right a#button-shoppingCart {
-      background-image: url("../images/cart.png");
-      background-repeat: no-repeat;
-      background-size: 30px 30px;
-      background-position: center right;
-      padding-right: 40px; }
 
 div#content div#sectionTitle h2 {
   text-transform: lowercase;
@@ -186,6 +182,9 @@ div#content div#wideContent {
   width: 600px; }
   div#content div#wideContent.wider {
     width: 660px; }
+  div#content div#wideContent.widest {
+    width: auto;
+    float: none; }
 
 div#footer {
   border-top: 2px black solid;
@@ -332,7 +331,45 @@ div#viewProduct {
     font-size: 2em;
     text-transform: lowercase;
     border-top: 2px #6c6c6c solid;
-    padding-top: 15px; }
+    padding-top: 15px;
+    margin: 40px 0 20px; }
+    div#viewProduct h3:first-of-type {
+      margin-top: 10px; }
+
+#addToCartButton {
+  border: none;
+  background-color: transparent;
+  color: #b30000;
+  font-family: Zag;
+  font-size: 1em;
+  margin: -11px 12px;
+  height: 50px;
+  text-transform: lowercase;
+  outline: none; }
+  #addToCartButton:hover {
+    color: #6c6c6c; }
+
+div#productPrice {
+  margin: 30px 0;
+  float: left;
+  width: 150px;
+  font-size: 1.4em;
+  height: 50px;
+  font-weight: bold; }
+
+div#productOptions {
+  margin: 30px 0;
+  font-size: 1.2em;
+  width: 790px;
+  float: right;
+  height: 50px;
+  text-align: right; }
+  div#productOptions div.productOptions-option {
+    display: inline-block;
+    margin-right: 15px;
+    vertical-align: top; }
+    div#productOptions div.productOptions-option:last-of-type {
+      margin-right: 0; }
 
 h2#regTitle {
   font-size: 2.5em;
@@ -393,6 +430,13 @@ input#regButton {
   margin-top: 30px; }
   input#regButton:hover {
     color: black; }
+
+.cartButton, div#header div#header-right a#button-shoppingCart, #addToCartButton {
+  background-image: url("../images/cart.png");
+  background-repeat: no-repeat;
+  background-size: 30px 30px;
+  background-position: top 5px right;
+  padding-right: 35px; }
 
 input {
   height: 40px;
