--- a/WebContent/resources/css/style.scss
+++ b/WebContent/resources/css/style.scss
@@ -96,15 +96,17 @@ div#header{
 		margin-right: 20px;
 
 		button, a{
+			display: inline-block;
 			border: none;
 			background-color: transparent;
 			color: $accentColor;
 			font-family: Zag;
-			font-size: 1.4em;
-			margin: 25px 20px 0;
+			font-size: 1.3em;
+			margin: 25px 12px 0;
 			height: 50px;
 			padding: 10px 0;
 			text-transform: lowercase;
+			text-decoration: none;
 			cursor: pointer;
 			outline: none;
 
@@ -114,11 +116,7 @@ div#header{
 		}
 
 		a#button-shoppingCart{
-			background-image: url("../images/cart.png");
-			background-repeat: no-repeat;
-			background-size: 30px 30px;
-			background-position: center right;
-			padding-right: 40px;
+			@extend .cartButton;
 		}
 	}
 }
@@ -279,6 +277,11 @@ div#content{
 
 		&.wider{
 			width: 660px;
+		}
+
+		&.widest{
+			width: auto;
+			float: none;
 		}
 	}
 }
@@ -494,6 +497,57 @@ div#viewProduct{
 		text-transform: lowercase;
 		border-top: 2px $fgColor1-fade solid;
 		padding-top: 15px;
+		margin: 40px 0 20px;
+
+		&:first-of-type{
+			margin-top: 10px;
+		}
+	}
+}
+
+#addToCartButton{
+	@extend .cartButton;
+
+	border: none;
+	background-color: transparent;
+	color: $accentColor;
+	font-family: Zag;
+	font-size: 1em;
+	margin: -11px 12px;
+	height: 50px;
+	text-transform: lowercase;
+	outline: none;
+
+	&:hover{
+		color: $fgColor1-fade;
+	}
+}
+
+div#productPrice{
+	margin: 30px 0;
+	float: left;
+	width: 150px;
+	font-size: 1.4em;
+	height: 50px;
+	font-weight: bold;
+}
+
+div#productOptions{
+	margin: 30px 0;
+	font-size: 1.2em;
+	width: 790px;
+	float: right;
+	height: 50px;
+	text-align: right;
+
+	div.productOptions-option{
+		display: inline-block;
+		margin-right: 15px;
+		vertical-align: top;
+
+		&:last-of-type{
+			margin-right: 0;
+		}
 	}
 }
 
@@ -594,6 +648,14 @@ input#regButton{
 }
 
 // General
+
+.cartButton{
+	background-image: url("../images/cart.png");
+	background-repeat: no-repeat;
+	background-size: 30px 30px;
+	background-position: top 5px right;
+	padding-right: 35px;
+}
 
 input{
 	height: 40px;
