--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -382,7 +382,7 @@ div.productReview div.productReview-rating {
   font-size: 0.9em;
   float: right; }
 div.productReview div.productReview-review {
-  white-space: pre;
+  white-space: pre-wrap;
   clear: both; }
 
 h2#regTitle {
