--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -469,7 +469,15 @@ table#regForm {
       margin-right: 5px; }
     table#regForm .regRow:last-of-type input:nth-of-type(2), table#regForm .regRow:last-of-type div#content div#narrowContent button:nth-of-type(2), div#content div#narrowContent table#regForm .regRow:last-of-type button:nth-of-type(2) {
       width: 100px; }
-  table#regForm input, table#regForm div#content div#narrowContent button, div#content div#narrowContent table#regForm button {
+    table#regForm .regRow.regRowHalf:first-of-type input:nth-of-type(1), table#regForm .regRow.regRowHalf:first-of-type div#content div#narrowContent button:nth-of-type(1), div#content div#narrowContent table#regForm .regRow.regRowHalf:first-of-type button:nth-of-type(1) {
+      width: 100px;
+      margin-right: 5px; }
+    table#regForm .regRow.regRowHalf:first-of-type input:nth-of-type(2), table#regForm .regRow.regRowHalf:first-of-type div#content div#narrowContent button:nth-of-type(2), div#content div#narrowContent table#regForm .regRow.regRowHalf:first-of-type button:nth-of-type(2) {
+      width: 195px; }
+  table#regForm input[type='text'], table#regForm div#content div#narrowContent button[type='text'], div#content div#narrowContent table#regForm button[type='text'],
+  table#regForm input[type='number'],
+  table#regForm div#content div#narrowContent button[type='number'],
+  div#content div#narrowContent table#regForm button[type='number'] {
     padding: 4px 10px;
     height: 30px;
     width: 300px;
