--- a/WebContent/resources/css/style.scss
+++ b/WebContent/resources/css/style.scss
@@ -691,9 +691,21 @@ table#regForm{
 				width: 100px;
 			}
 		}
+
+		&.regRowHalf:first-of-type{
+			input:nth-of-type(1){
+				width: 100px;
+				margin-right: 5px;
+			}
+
+			input:nth-of-type(2){
+				width: 195px;
+			}
+		}
 	}
 
-	input{
+	input[type='text'],
+	input[type='number']{
 		padding: 4px 10px;
 		height: 30px;
 		width: 300px;
