--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -34,7 +34,7 @@ div#header {
     height: 75px;
     margin: 10px 40px 5px;
     display: inline-block; }
-  div#header input, div#header div#content div#narrowContent .regButton, div#content div#narrowContent div#header .regButton, div#header select {
+  div#header input, div#header select {
     height: 40px;
     border: 1px #000 solid;
     padding: 0 8px;
@@ -52,7 +52,7 @@ div#header {
     background-repeat: no-repeat;
     background-size: 10px 10px;
     background-position: center right 5px; }
-  div#header input#search, div#header div#content div#narrowContent #search.regButton, div#content div#narrowContent div#header #search.regButton {
+  div#header input#search {
     position: absolute;
     top: 28px;
     left: 250px;
@@ -142,7 +142,17 @@ div#content div#narrowContent {
   div#content div#narrowContent img {
     max-width: 280px; }
   div#content div#narrowContent .regButton {
-    width: 100%; }
+    border: 1px #000 solid;
+    padding: 8px;
+    color: #6c6c6c;
+    font-family: Zag;
+    font-size: 1em;
+    outline: none;
+    text-decoration: none;
+    display: block;
+    background: lightgray;
+    border: 1px black solid;
+    text-align: center; }
     div#content div#narrowContent .regButton:hover {
       color: #b30000; }
   div#content div#narrowContent ul#filterList {
@@ -170,10 +180,10 @@ div#content div#narrowContent {
           background: none;
           margin: 0;
           padding: 0; }
-          div#content div#narrowContent ul#filterList li ul li input, div#content div#narrowContent ul#filterList li ul li .regButton {
+          div#content div#narrowContent ul#filterList li ul li input {
             position: relative;
             vertical-align: middle; }
-          div#content div#narrowContent ul#filterList li ul li input[type=number], div#content div#narrowContent ul#filterList li ul li [type=number].regButton {
+          div#content div#narrowContent ul#filterList li ul li input[type=number] {
             width: 80px;
             height: 25px;
             border-color: lightgray; }
@@ -278,7 +288,7 @@ div#loginForm {
       font-size: 1.2em;
       position: relative;
       top: 2px; }
-    div#loginForm div.form-group input.form-input, div#loginForm div.form-group div#content div#narrowContent .form-input.regButton, div#content div#narrowContent div#loginForm div.form-group .form-input.regButton {
+    div#loginForm div.form-group input.form-input {
       width: 180px;
       height: 30px; }
   div#loginForm .loginButton {
@@ -413,20 +423,20 @@ div.productReview {
   resize: vertical;
   min-height: 100px; }
 
-input.reviewRating, div#content div#narrowContent .reviewRating.regButton {
+input.reviewRating {
   -webkit-appearance: none;
   width: 15px;
   height: 20px;
   outline: none;
   border: none; }
-  input.reviewRating:before, div#content div#narrowContent .reviewRating.regButton:before {
+  input.reviewRating:before {
     content: "\2606";
     display: block;
     position: relative;
     width: 15px;
     left: 0;
     color: #b30000; }
-  input.reviewRating.active:before, div#content div#narrowContent .reviewRating.active.regButton:before {
+  input.reviewRating.active:before {
     content: "\2605"; }
 
 #userReview-rating {
@@ -463,39 +473,37 @@ table#regForm {
     padding: 7px 10px 0 0; }
     table#regForm .regRow:first-of-type {
       padding: 0; }
-      table#regForm .regRow:first-of-type input:nth-of-type(1), table#regForm .regRow:first-of-type div#content div#narrowContent .regButton:nth-of-type(1), div#content div#narrowContent table#regForm .regRow:first-of-type .regButton:nth-of-type(1) {
+      table#regForm .regRow:first-of-type input:nth-of-type(1) {
         width: 100px;
         margin-right: 5px; }
-      table#regForm .regRow:first-of-type input:nth-of-type(2), table#regForm .regRow:first-of-type div#content div#narrowContent .regButton:nth-of-type(2), div#content div#narrowContent table#regForm .regRow:first-of-type .regButton:nth-of-type(2) {
+      table#regForm .regRow:first-of-type input:nth-of-type(2) {
         width: 195px; }
-    table#regForm .regRow:last-of-type input:nth-of-type(1), table#regForm .regRow:last-of-type div#content div#narrowContent .regButton:nth-of-type(1), div#content div#narrowContent table#regForm .regRow:last-of-type .regButton:nth-of-type(1) {
+    table#regForm .regRow:last-of-type input:nth-of-type(1) {
       width: 195px;
       margin-right: 5px; }
-    table#regForm .regRow:last-of-type input:nth-of-type(2), table#regForm .regRow:last-of-type div#content div#narrowContent .regButton:nth-of-type(2), div#content div#narrowContent table#regForm .regRow:last-of-type .regButton:nth-of-type(2) {
+    table#regForm .regRow:last-of-type input:nth-of-type(2) {
       width: 100px; }
-    table#regForm .regRow.regRowHalf:first-of-type input:nth-of-type(1), table#regForm .regRow.regRowHalf:first-of-type div#content div#narrowContent .regButton:nth-of-type(1), div#content div#narrowContent table#regForm .regRow.regRowHalf:first-of-type .regButton:nth-of-type(1) {
+    table#regForm .regRow.regRowHalf:first-of-type input:nth-of-type(1) {
       width: 100px;
       margin-right: 5px; }
-    table#regForm .regRow.regRowHalf:first-of-type input:nth-of-type(2), table#regForm .regRow.regRowHalf:first-of-type div#content div#narrowContent .regButton:nth-of-type(2), div#content div#narrowContent table#regForm .regRow.regRowHalf:first-of-type .regButton:nth-of-type(2) {
+    table#regForm .regRow.regRowHalf:first-of-type input:nth-of-type(2) {
       width: 195px; }
-  table#regForm input[type='text'], table#regForm div#content div#narrowContent [type='text'].regButton, div#content div#narrowContent table#regForm [type='text'].regButton,
-  table#regForm input[type='number'],
-  table#regForm div#content div#narrowContent [type='number'].regButton,
-  div#content div#narrowContent table#regForm [type='number'].regButton {
+  table#regForm input[type='text'],
+  table#regForm input[type='number'] {
     padding: 4px 10px;
     height: 30px;
     width: 300px;
     border-width: 2px; }
-  table#regForm #regName input:nth-of-type(1), table#regForm #regName div#content div#narrowContent .regButton:nth-of-type(1), div#content div#narrowContent table#regForm #regName .regButton:nth-of-type(1) {
+  table#regForm #regName input:nth-of-type(1) {
     width: 125px;
     margin-right: 5px; }
-  table#regForm #regName input:nth-of-type(2), table#regForm #regName div#content div#narrowContent .regButton:nth-of-type(2), div#content div#narrowContent table#regForm #regName .regButton:nth-of-type(2) {
+  table#regForm #regName input:nth-of-type(2) {
     width: 40px;
     margin-right: 5px; }
-  table#regForm #regName input:nth-of-type(3), table#regForm #regName div#content div#narrowContent .regButton:nth-of-type(3), div#content div#narrowContent table#regForm #regName .regButton:nth-of-type(3) {
+  table#regForm #regName input:nth-of-type(3) {
     width: 125px; }
 
-input#regButton, div#content div#narrowContent #regButton.regButton {
+input#regButton {
   background-color: transparent;
   border: none;
   color: #b30000;
@@ -503,8 +511,17 @@ input#regButton, div#content div#narrowContent #regButton.regButton {
   text-transform: lowercase;
   text-shadow: 1px 1px #939393;
   margin-top: 30px; }
-  input#regButton:hover, div#content div#narrowContent #regButton.regButton:hover {
+  input#regButton:hover {
     color: black; }
+
+table#usersTable {
+  border-collapse: collapse; }
+  table#usersTable td, table#usersTable th {
+    padding: 10px; }
+  table#usersTable th {
+    text-align: left;
+    font-size: 1.5em;
+    border-bottom: 2px lightgray solid; }
 
 h2, h3 {
   line-height: 120%; }
@@ -516,7 +533,7 @@ h2, h3 {
   background-position: top 5px right;
   padding-right: 35px; }
 
-input, div#content div#narrowContent .regButton {
+input {
   height: 40px;
   border: 1px #000 solid;
   padding: 0 8px;
