--- a/WebContent/resources/css/style.scss
+++ b/WebContent/resources/css/style.scss
@@ -63,13 +63,6 @@ div#header{
 	}
 
 	select{
-		-webkit-padding-end: 16px;
-		-webkit-padding-start: 8px;
-		-webkit-appearance: button;
-		-webkit-border-radius: 0;
-		-webkit-box-shadow: none;
-		background-image: url('../images/arrow-down.png');
-		background-repeat: no-repeat;
 		background-size: 10px 10px;
 		background-position: center right 5px;
 	}
@@ -727,11 +720,29 @@ table#regForm{
 
 	input[type='text'],
 	input[type='number'],
-	input[type='password']{
+	input[type='password'],
+	select,
+	textarea{
 		padding: 4px 10px;
-		height: 30px;
 		width: 300px;
 		border-width: 2px;
+	}
+
+	input[type='text'],
+	input[type='number'],
+	input[type='password'],
+	select{
+		height: 30px;
+	}
+
+	textarea{
+		min-height: 100px;
+		resize: vertical;
+	}
+
+	select{
+		background-size: 10px 10px;
+		background-position: center right 5px;
 	}
 
 	input[type="radio"]{
@@ -829,4 +840,14 @@ input{
 
 .clear{
 	clear: both;
+}
+
+select{
+	-webkit-padding-end: 16px;
+	-webkit-padding-start: 8px;
+	-webkit-appearance: button;
+	-webkit-border-radius: 0;
+	-webkit-box-shadow: none;
+	background-image: url('../images/arrow-down.png');
+	background-repeat: no-repeat;
 }
